manifests/catalog/templates/controller-manager-deployment.yaml
##---
# Source: catalog/templates/controller-manager-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-catalog-catalog-controller-manager
  labels:
    app: service-catalog-catalog
    chart: "catalog-0.3.0-beta.2"
    release: "service-catalog"
    heritage: "Tiller"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  minReadySeconds: 1
  selector:
    matchLabels:
      app: service-catalog-catalog-controller-manager
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "false"
      
      labels:
        app: service-catalog-catalog-controller-manager
        chart: "catalog-0.3.0-beta.2"
        release: "service-catalog"
        heritage: "Tiller"
    spec:
      serviceAccountName: "service-catalog-controller-manager"
      imagePullSecrets:
        []
        
      containers:
      - name: controller-manager
        image: quay.io/kubernetes-service-catalog/service-catalog:v0.3.0-beta.2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
          
        args:
        - controller-manager
        - --secure-port
        - "8444"
        - "--cluster-id-configmap-namespace=default"
        
        - "--leader-elect=false"
        
        
        - -v
        - "10"
        - --resync-interval
        - 5m
        - --broker-relist-interval
        - 24h
        - --operation-polling-maximum-backoff-duration
        - 20m
        - --osb-api-request-timeout
        - 60s
        - --feature-gates
        - OriginatingIdentity=true
        - --feature-gates
        - ServicePlanDefaults=false
        ports:
        - containerPort: 8444
        readinessProbe:
          httpGet:
            port: 8444
            path: /healthz/ready
            scheme: HTTPS
          failureThreshold: 1
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            port: 8444
            path: /healthz
            scheme: HTTPS
          failureThreshold: 3
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
