manifests/catalog/templates/controller-manager-service.yaml
##---
# Source: catalog/templates/controller-manager-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-catalog-catalog-controller-manager
  labels:
    app: service-catalog-catalog-controller-manager
    chart: "catalog-0.3.0-beta.2"
    release: "service-catalog"
    heritage: "Tiller"
spec:
  type: ClusterIP
  selector:
    app: service-catalog-catalog-controller-manager
  ports:
  - name: secure
    protocol: TCP
    port: 443
    targetPort: 8444
