manifests/catalog/templates/webhook-register.yaml
##---
# Source: catalog/templates/webhook-register.yaml

apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: service-catalog-catalog-webhook
webhooks:
- name: mutating.clusterservicebrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-clusterservicebrokers"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["clusterservicebrokers"]
- name: mutating.clusterserviceclasses.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-clusterserviceclasses"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["clusterserviceclasses"]
- name: mutating.serviceclasses.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-serviceclasses"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["serviceclasses"]
- name: mutating.clusterserviceplans.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-clusterserviceplans"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["clusterserviceplans"]
- name: mutating.serviceplans.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-serviceplans"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["serviceplans"]
- name: mutating.servicebindings.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-servicebindings"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["servicebindings"]
- name: mutating.servicebrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-servicebrokers"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["servicebrokers"]
- name: mutating.serviceinstances.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/mutating-serviceinstances"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["serviceinstances"]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: service-catalog-catalog-validating-webhook
webhooks:
- name: validating.status.servicebindings.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-servicebindings/status"
  failurePolicy: Fail
  rules:
  - operations: [ "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["servicebindings/status"]
- name: validating.status.servicbrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-servicebrokers/status"
  failurePolicy: Fail
  rules:
  - operations: [ "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["servicebrokers/status"]
- name: validating.status.clusterservicbrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-clusterservicebrokers/status"
  failurePolicy: Fail
  rules:
  - operations: [ "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["clusterservicebrokers/status"]
- name: validating.serviceinstances.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-serviceinstances"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["serviceinstances"]
- name: validating.clusterservicebrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-clusterservicebrokers"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["clusterservicebrokers"]
- name: validating.servicebindings.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-servicebindings"
  failurePolicy: Fail
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: ["servicecatalog.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["servicebindings"]
- name: validating.servicebrokers.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-servicebrokers"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["servicebrokers"]
- name: validating.serviceclasses.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-serviceclasses"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["serviceclasses"]
- name: validating.clusterserviceclasses.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-clusterserviceclasses"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["clusterserviceclasses"]
- name: validating.serviceplans.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-serviceplans"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["serviceplans"]
- name: validating.clusterserviceplans.servicecatalog.k8s.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFsTVNNd0lRWURWUVFERXhwelpYSjIKYVdObExXTmhkR0ZzYjJjdGQyVmlhRzl2YXkxallUQWVGdzB4T1RFeE1EZ3dOVFV4TkRSYUZ3MHlPVEV4TURVdwpOVFV4TkRSYU1DVXhJekFoQmdOVkJBTVRHbk5sY25acFkyVXRZMkYwWVd4dlp5MTNaV0pvYjI5ckxXTmhNSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEwdWIyOE9ERHB3WVB0VUtlc2VrUUtuMVkKMG9IZmx1WXIvUWwxUFlsbkVNSXYwekc0c2xzS0RYbmpzemR5aEttOGZ5cEdiTDNnOVRLOVJiOTBkZ2FkY0pHWQpEcDdOVWdIby9nSz [...]
    service:
      name: service-catalog-catalog-webhook
      namespace: "default"
      path: "/validating-clusterserviceplans"
  failurePolicy: Fail
  rules:
    - operations: [ "CREATE", "UPDATE" ]
      apiGroups: ["servicecatalog.k8s.io"]
      apiVersions: ["v1beta1"]
      resources: ["clusterserviceplans"]
